--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -129,7 +129,7 @@
                         <div class="slider-content">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h1>Rejoignez l'élité</h1>
+                                    <h1>Rejoignez l'élite</h1>
                                     <form id="slider-form" role="form" action="#" method="post">
                                         <div class="row">
                                             <div class="col-md-6">
