--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -54,7 +54,7 @@
                             </figure>
                             <aside>
                                 <header>
-                                    <a href="event-detail.html">Journée porter ouverte et mini salon de l'orientation</a>
+                                    <a href="event-detail.html">Journée porte ouverte et mini salon de l'orientation</a>
                                 </header>
                                 <div class="additional-info clearfix" >Groupe Nayeba</div>
                             </aside>
