--- a/etablissement/templates/etablissement2.html
+++ b/etablissement/templates/etablissement2.html
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box">
                                 <header><h3>Année Prepas</h3></header>
-                                <div class="price">$20</div>
+                                <div class="price">20FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
@@ -78,7 +78,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box recommended">
                                 <header><h3>1ère Année</h3></header>
-                                <div class="price">$30</div>
+                                <div class="price">30FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
@@ -91,7 +91,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box">
                                 <header><h3>2 ème année</h3></header>
-                                <div class="price">$30</div>
+                                <div class="price">30FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
