--- a/etablissement/templates/etablissement.html
+++ b/etablissement/templates/etablissement.html
@@ -61,7 +61,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box">
                                 <header><h3>Licence 1</h3></header>
-                                <div class="price">$20</div>
+                                <div class="price">20FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
@@ -74,7 +74,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box recommended">
                                 <header><h3>Licence 2 & 3</h3></header>
-                                <div class="price">$30</div>
+                                <div class="price">30FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
@@ -87,7 +87,7 @@
                         <div class="col-md-3 col-sm-3">
                             <div class="price-box">
                                 <header><h3>Master</h3></header>
-                                <div class="price">$30</div>
+                                <div class="price">30FCFA</div>
                                 <figure>Forever</figure>
                                 <a href="#" class="btn btn-large">S'inscrire</a>
                                 <ul class="features">
